{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 91,
  "lineage": "1b8e535f-b89b-7d56-728e-c055ffbea55a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab_terraform_trial",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ffac3e16de16665e",
            "arn": "arn:aws:ec2:ap-northeast-1:959896818063:instance/i-055ac316f031c3c2b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055ac316f031c3c2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2ddaef9c7f72900",
            "private_dns": "ip-10-0-10-211.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a4a04caf43b5d76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d42136bf8ee22873",
            "tags": {
              "Name": "lab-terraform-trial",
              "Owner": "Pepi"
            },
            "tags_all": {
              "Name": "lab-terraform-trial",
              "Owner": "Pepi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05607bc4abea4c351"
            ]
          },
          "dependencies": [
            "aws_security_group.ppy_sg_terraform_test",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ffac3e16de16665e",
            "arn": "arn:aws:ec2:ap-northeast-1:959896818063:instance/i-0c4904d0c02feea83",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4904d0c02feea83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b609afb62b5620a",
            "private_dns": "ip-10-0-10-169.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b9df656a5bca7a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d42136bf8ee22873",
            "tags": {
              "Name": "lab-terraform-trial",
              "Owner": "Pepi"
            },
            "tags_all": {
              "Name": "lab-terraform-trial",
              "Owner": "Pepi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05607bc4abea4c351"
            ]
          },
          "dependencies": [
            "aws_security_group.ppy_sg_terraform_test",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_terraform_ex",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:959896818063:internet-gateway/igw-08d52743d43074647",
            "id": "igw-08d52743d43074647",
            "owner_id": "959896818063",
            "tags": {
              "Name": "Internet gateway"
            },
            "tags_all": {
              "Name": "Internet gateway"
            },
            "vpc_id": "vpc-0feac8ab0a02c2a7f"
          },
          "dependencies": [
            "aws_vpc.ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_ex",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/4",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08d52743d43074647",
            "id": "r-rtb-0a9b4c2c0a449606c1192111311",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9b4c2c0a449606c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_terraform_ex",
            "aws_vpc.ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ppy_sg_terraform_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:959896818063:security-group/sg-05607bc4abea4c351",
            "description": "Configuration Securty group for Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/4"
                ],
                "description": "Allow semua protocol yang keluar",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05607bc4abea4c351",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/4"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/4"
                ],
                "description": "Allow Web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/4"
                ],
                "description": "Allow all protocol yang masuk",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow https from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_terraform_test",
            "name_prefix": "",
            "owner_id": "959896818063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_terraform_test"
            },
            "tags_all": {
              "Name": "sg_terraform_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feac8ab0a02c2a7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:959896818063:subnet/subnet-0d42136bf8ee22873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d42136bf8ee22873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959896818063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-private_subnet-ex-ppy"
            },
            "tags_all": {
              "Name": "terraform-aws-private_subnet-ex-ppy"
            },
            "vpc_id": "vpc-0feac8ab0a02c2a7f"
          },
          "dependencies": [
            "aws_vpc.ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ex_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:959896818063:vpc/vpc-0feac8ab0a02c2a7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077ac90bab811134d",
            "default_route_table_id": "rtb-0a9b4c2c0a449606c",
            "default_security_group_id": "sg-0b3a720da41aa18bc",
            "dhcp_options_id": "dopt-4a460e2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0feac8ab0a02c2a7f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9b4c2c0a449606c",
            "owner_id": "959896818063",
            "tags": {
              "Name": "terraform-aws-vpc-ex-ppy"
            },
            "tags_all": {
              "Name": "terraform-aws-vpc-ex-ppy"
            }
          }
        }
      ]
    }
  ]
}